--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,5 +12,7 @@ jobs:
         run: npm install
       - name: Run unit tests
         run: npm run test
+      - name: Run lint
+        run: npx eslint . --ext .js,.jsx,.ts,.tsx
       - name: Build the project
         run: npm run build
